[tool.poetry]
name = "project-end-of-the-line"
version = "0.1.0"
description = "Railroads Online traffic geneprator and dispatcher"
authors = ["Arnold Hilberink <104128195+NovioArnold@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "project_end_of_the_line"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.3.0"
pytest = "^7.4.2"
sqlalchemy = "^2.0.20"
fastapi = "^0.103.1"
pylint = "^2.17.5"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
